--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -1,17 +1,33 @@
+name: push-and-pr
 on:
   push: &map
     branches:
       - main
       - release/*
     paths:
-      - src/**
+      - "src/**"
+      - "package.json"
   pull_request:
     <<: *map
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-     - name: checkout code
-       uses: actions/checkout@v4
-     - name: run test
-       run: npm test
+      - name: checkout code
+        uses: actions/checkout@v4
+
+      - name: setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: show tree (debug)
+        run: |
+          pwd
+          ls -la
+          node -v
+          npm -v
+
+      - name: run test
+        run: npm test
