--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,7 +2,7 @@ on:
   workflow_dispatch:
 jobs:
   deploy:
-    runs-on: ubuntu-ltest
+    runs-on: ubuntu-latest
     steps:
       - name: deploy application
         run: echo " deploying the application "
