--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,5 +20,5 @@ jobs:
     
     steps:
       - name: deploy application
-        run: echo " deploying the application "
+        run: echo " deploying the application on ${{ inputs.environement }} "
         
