--- a/.github/workflows/Azure.yml
+++ b/.github/workflows/Azure.yml
@@ -1,22 +1,25 @@
 name: Azure OIDC
+
 on:
   push:
     branches: [ main ]
+
 permissions:
   id-token: write
-  content: read
-
+  contents: read   # <-- 'contents', pas 'content'
 
 jobs:
   test-oidc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Login to Azure using OIDC
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       - name: Show current Azure account
         run: az account show
