--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Build and push
         run: |
           IMAGE=ghcr.io/${{ github.repository_owner }}/hello-ghcr:latest
+          IMAGE=$(echo $IMAGE | tr '[:upper:]' '[:lower:]')
           docker build -t $IMAGE .
           docker push $IMAGE
+
